# pointcloud_storer_ros

./: .rosinstall  CMakeLists.txt  README.md  package.xml
.github/workflows/: test.yaml
include/pointcloud_storer/: pointcloud_storer.h
launch/: gazebo.launch  local_map.rviz  pointcloud_storer.launch  rviz.rviz  test.launch
src/: pointcloud_storer.cpp
