<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_storer_ros</name>
  <version>0.0.0</version>
  <description>The pointcloud_storer_ros package</description>
  <maintainer email="tnakamura.amsl@gmail.com">Toshiki Nakamura</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>icp_matching_ros</build_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>
</package>
